After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740013 - rtspconnection: There is an warning by mismatch of parameter name in header and source files
rtspconnection: There is an warning by mismatch of parameter name in header a...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Low trivial
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-12 14:05 UTC by Hyunjun Ko
Modified: 2014-11-19 18:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtspconnection: There is an warning by mismatch of parameter name (1.02 KB, patch)
2014-11-12 14:09 UTC, Hyunjun Ko
needs-work Details | Review
rtspconnection: There is an warning by mismatch of parameter name in header and source files (1.07 KB, patch)
2014-11-19 12:19 UTC, Hyunjun Ko
committed Details | Review

Description Hyunjun Ko 2014-11-12 14:05:42 UTC
When generating GstRtsp-1.0.gir in gst-plugins-base/gst-libs/gst/rtsp/, there is an warning as below.

Warning: GstRtsp: gst_rtsp_watch_set_flushing: unknown parameter 'flushing' in documentation comment, should be 'flush'

This is because mismatch between declaration in header and source file.

<gstrtspconnection.h>
void gst_rtsp_watch_set_flushing (GstRTSPWatch * watch, gboolean flush);
<gstrtspconnection.c>
void gst_rtsp_watch_set_flushing (GstRTSPWatch * watch, gboolean flushing);
Comment 1 Hyunjun Ko 2014-11-12 14:09:52 UTC
Created attachment 290517 [details] [review]
rtspconnection: There is an warning by mismatch of parameter name
Comment 2 Reynaldo H. Verdejo Pinochet 2014-11-18 16:11:06 UTC
Comment on attachment 290517 [details] [review]
rtspconnection: There is an warning by mismatch of parameter name

Hi. Thanks for your patch. Please add
bug # in commit message and resubmit.
Comment 3 Hyunjun Ko 2014-11-19 12:19:46 UTC
Created attachment 290979 [details] [review]
rtspconnection: There is an warning by mismatch of parameter name in header and source files
Comment 4 Reynaldo H. Verdejo Pinochet 2014-11-19 16:35:38 UTC
Comment on attachment 290979 [details] [review]
rtspconnection: There is an warning by mismatch of parameter name in header and source files

Patch looks OK. I'm pushing after fixing the commit message.
Comment 5 Reynaldo H. Verdejo Pinochet 2014-11-19 16:47:23 UTC
Hyunjun: Thanks for your patch. Had to fix the commit
message before pushing though, please see bellow to get
an idea of what is expected:

commit cb15df15acd90a1c63f5a02f64acfff957c0bcd2
Author: Hyunjun Ko <zzoonis@gmail.com>
Date:   Wed Nov 19 21:18:04 2014 +0900

    rtspconnection: fix warning on param name mismatch
    
    https://bugzilla.gnome.org/show_bug.cgi?id=740013