rtspconnection: fix warning on param name mismatch

https://bugzilla.gnome.org/show_bug.cgi?id=740013